--- a/index.html
+++ b/index.html
@@ -33,7 +33,22 @@
   <p id='comment-display'>
     Insert comment here
   </p>
+  
+  <form id="edit-ramen">
+    <h4>Update the Featured Ramen</h4>
+    <label for="rating">Rating: </label>
+    <input type="number" name="rating" id="newrating" />
+    <label for="newcomment">Comment: </label>
+    <textarea name="newcomment" id="newcomment"></textarea>
+    <input type="submit" value="Update" />
+  </form>
 
+  
+  <btn id="'delete">
+    <h4>DELETE THIS RAMEN</h4>
+  </btn>
+  
+  
   <!-- New Ramen Form -->
   <form id="new-ramen">
     <h4>Add New Ramen</h4>
@@ -45,10 +60,11 @@
     <input type="text" name="image" id="new-image" />
     <label for="rating">Rating: </label>
     <input type="number" name="rating" id="new-rating" />
-    <label for="new-comment">Comment: </label>
-    <textarea name="new-comment" id="new-comment"></textarea>
+    <label for="comment">Comment: </label>
+    <textarea name="comment" id="comment"></textarea>
     <input type="submit" value="Create" />
   </form>
+
 
 </body>
 
