--- a/index.html
+++ b/index.html
@@ -34,38 +34,42 @@
     Insert comment here
   </p>
   
-  <form id="edit-ramen">
-    <h4>Update the Featured Ramen</h4>
-    <label for="rating">Rating: </label>
-    <input type="number" name="rating" id="newrating" />
-    <label for="newcomment">Comment: </label>
-    <textarea name="newcomment" id="newcomment"></textarea>
-    <input type="submit" value="Update" />
-  </form>
-
+  <div>
+    
+    <div id="left-column">
+    <!-- New Ramen Form -->
+      <form id="new-ramen">
+        <h4>Add New Ramen</h4>
+        <label for="name">Name: </label>
+        <input type="text" name="name" id="new-name" />
+        <label for="restaurant">Restaurant: </label>
+        <input type="text" name="restaurant" id="new-restaurant" />
+        <label for="image">Image: </label>
+        <input type="text" name="image" id="new-image" />
+        <label for="rating">Rating: </label>
+        <input type="number" name="rating" id="new-rating" />
+        <label for="comment">Comment: </label>
+        <textarea name="comment" id="comment"></textarea>
+        <input type="submit" value="Create" />
+      </form>
+    </div>
+    <div id="right-column">
+      <form id="edit-ramen">
+        <h4>Update the Featured Ramen</h4>
+        <label for="rating">Rating: </label>
+        <input type="number" name="rating" id="newrating" />
+        <label for="newcomment">Comment: </label>
+        <textarea name="newcomment" id="newcomment"></textarea>
+        <input type="submit" value="Update" />
+      </form>
+      <div id="button">
+        <btn id="delete">
+          DELETE THE FEATURED RAMEN
+        </btn>
+      </div>
+    </div>
+  </div>
   
-  <btn id="'delete">
-    <h4>DELETE THIS RAMEN</h4>
-  </btn>
-  
-  
-  <!-- New Ramen Form -->
-  <form id="new-ramen">
-    <h4>Add New Ramen</h4>
-    <label for="name">Name: </label>
-    <input type="text" name="name" id="new-name" />
-    <label for="restaurant">Restaurant: </label>
-    <input type="text" name="restaurant" id="new-restaurant" />
-    <label for="image">Image: </label>
-    <input type="text" name="image" id="new-image" />
-    <label for="rating">Rating: </label>
-    <input type="number" name="rating" id="new-rating" />
-    <label for="comment">Comment: </label>
-    <textarea name="comment" id="comment"></textarea>
-    <input type="submit" value="Create" />
-  </form>
-
-
 </body>
 
 </html>
